# 3d-render-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
assets/: book.mtl  spinningTop.mtl
include/: Edge.h  Face.h  Quadric.h  Triangle.h  Vec3.h  Vertex.h  mesh.h  renderer.h  transformation.h
src/: Quadric.cpp  Vec3.cpp  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  transformation.cpp  transformation.h
